# raviz

./: .gitignore  CMakeLists.txt  README.md  TODO.md  raviz.desktop
packaging/aur/: PKGBUILD
src/: main.c
src/audio/: audio.c  audio.h
src/fft/: fft.c  fft.h
src/render/: gl_loader.c  gl_loader.h  render.c  render.h
src/utils/: config.c  config.h
